--- a/notebook/portfolio_analysis.ipynb
+++ b/notebook/portfolio_analysis.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 1,
    "id": "8df19408",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Importing necessary liabraries\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -24,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 2,
    "id": "75785c0d",
    "metadata": {},
    "outputs": [
@@ -177,7 +178,7 @@
        "9  2013-02-22  101.07  101.30  100.230  101.16  1576132  COST"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,12 +191,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 6,
    "id": "6493aa57",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#convertinf  date column to datetime datatype\n",
     "low_data['date'] = pd.to_datetime(low_data['date'])\n",
+    "#setting date column to index\n",
     "low_data.set_index('date', inplace=True)"
    ]
   },
@@ -209,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 7,
    "id": "842077ee",
    "metadata": {},
    "outputs": [
@@ -306,6 +309,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f9f5d7c3",
+   "metadata": {},
+   "source": [
+    "#### Key Takeaway:\n",
+    "\n",
+    "- Among the stocks, Microsoft has the highest return (0.00104), which indicates this stocks perform better over the period between 2013-2018. Procter & Gamble had the lowest average return.\n",
+    "\n",
+    "- Microsoft has the highest volatility compare to other assets, where its standard deviation and variance is the high among all stocks. PepsiCo has the lowest variance and standard deviation, which make it relatively lower risk.\n",
+    "\n",
+    "- Overall, the portfolio has a return on 0.00052 and a low risk with SD of 0.00689, which makes it a balanced portfolio with diversified risk.\n",
+    "\n",
+    "- Visa and #M have a better risk-reward balance, where it has relatively higher average returns and moderate standard deviation.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7f6a5153",
    "metadata": {},
    "source": [
@@ -314,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 8,
    "id": "d8b5b349",
    "metadata": {},
    "outputs": [
@@ -369,6 +388,20 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b1a7dab6",
+   "metadata": {},
+   "source": [
+    "#### Key takeaways\n",
+    "\n",
+    "- This portfolio on average, can expect to return about 13.05% per year.\n",
+    "- Over the year this portfolio is expected to fluctuate by 10.89%.\n",
+    "- It has a negative Sharpe ration of -4.30, indication the the portfolio returns are not compensation for the risk taken.\n",
+    "\n",
+    "In conclusion the Sharpe ration indicate the this portfolio is performing poorly.Relatively to its risk the returns are low. the strategy is not effective in compensating for the risk taken.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "13250ae4",
    "metadata": {},
    "source": [
@@ -377,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 11,
    "id": "ccba7bba",
    "metadata": {},
    "outputs": [
@@ -925,22 +958,6 @@
     "\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b04f163f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3265cd0e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
